<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.placar.MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/titulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rodape"
        android:layout_below="@+id/header"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_da_casa" />

        <EditText
            android:id="@+id/etTimeCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_o_nome_do_time_da_casa" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_da_visitante" />

        <EditText
            android:id="@+id/etTimeVisitante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informe_o_nome_do_time_visitante" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="iniciarJogo"
            android:text="@string/iniciar_jogo" />

    </LinearLayout>

    <TextView
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/author" />
</RelativeLayout>
